gccida/g1/dwarf2out_frame_debug
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug/src/dwarf2out.c:2100:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1626, "dwarf2out_frame_debug"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug/src/dwarf2out.c:2129:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtx = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug/src/dwarf2out.c:2139:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64)insn[2]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug/src/dwarf2out.c:2145:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 1009, "dwarf2out_stack_adjust"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug/src/dwarf2out.c:2154:7: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
v7 = -args_size_0; 
      ^~~~~~~~~~~
      args_size
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug/src/dwarf2out.c:2158:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = (  struct rtx_def *)insn[2]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug/src/dwarf2out.c:2188:6: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
v9 = args_size_0 + v7; 
     ^~~~~~~~~~~
     args_size
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug/src/dwarf2out.c:2191:1: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
args_size_0 = v9; 
^~~~~~~~~~~
args_size
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug/src/dwarf2out.c:2194:27: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
dwarf2out_args_size( v10, args_size_0); 
                          ^~~~~~~~~~~
                          args_size
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dwarf2out_frame_debug/src/obj/dwarf2out.o] Error 1
